--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,6 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0-beta05'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0-beta01'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.1.0-beta01'
     implementation 'androidx.navigation:navigation-fragment:2.1.0'
@@ -35,6 +34,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation 'com.google.android.material:material:1.1.0-beta01'
     implementation 'me.biubiubiu.justifytext:library:1.1'
+    implementation 'com.wdullaer:swipeactionadapter:2.0.0'
     //implementation 'com.github.rey5137:material:1.2.5'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
