--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0-beta01'
     implementation 'me.biubiubiu.justifytext:library:1.1'
     implementation 'com.wdullaer:swipeactionadapter:2.0.0'
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
     //implementation 'com.github.rey5137:material:1.2.5'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
