[WIP] Add comments with keyboard image enabled

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation 'com.wdullaer:swipeactionadapter:2.0.0'
     implementation 'de.hdodenhof:circleimageview:3.0.1'
     implementation 'tyrantgit:explosionfield:1.0.1'
+    implementation 'com.gsconrad:richcontentedittext:1.0.0'
+    //implementation 'com.sackcentury:shinebutton:1.0.0'
     //implementation 'com.github.rey5137:material:1.2.5'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
