--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.1'
     implementation 'tyrantgit:explosionfield:1.0.1'
     implementation 'com.gsconrad:richcontentedittext:1.0.0'
+    implementation 'com.github.bumptech.glide:glide:3.6.1'
+    //implementation 'com.android.support:support-v4:23.1.1'
     //implementation 'com.sackcentury:shinebutton:1.0.0'
     //implementation 'com.github.rey5137:material:1.2.5'
     testImplementation 'junit:junit:4.12'
