Image enabled in reviews

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'tyrantgit:explosionfield:1.0.1'
     implementation 'com.gsconrad:richcontentedittext:1.0.0'
     implementation 'com.github.bumptech.glide:glide:3.6.1'
+    //implementation 'com.squareup.picasso:picasso:2.71828'
     //implementation 'com.android.support:support-v4:23.1.1'
     //implementation 'com.sackcentury:shinebutton:1.0.0'
     //implementation 'com.github.rey5137:material:1.2.5'
