--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'com.gsconrad:richcontentedittext:1.0.0'
     implementation 'com.github.bumptech.glide:glide:3.6.1'
     implementation 'com.github.jd-alexander:LikeButton:0.2.3'
+    implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
     //implementation 'com.squareup.picasso:picasso:2.71828'
     //implementation 'com.android.support:support-v4:23.1.1'
     //implementation 'com.sackcentury:shinebutton:1.0.0'
