--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".CommentActivity"
-            android:windowSoftInputMode="stateAlwaysVisible">
+            android:windowSoftInputMode="stateAlwaysVisible"
+            android:theme="@style/AppTheme">
 
         </activity>
         <activity android:name=".MainActivity" />
