Implement the Paypal Service on the app and implemented the upgrade layout on the button upgrade

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
 
     implementation 'com.facebook.android:facebook-login:5.9.0'
+    implementation 'com.paypal.sdk:paypal-android-sdk:2.16.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
