--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.1'
     implementation 'tyrantgit:explosionfield:1.0.1'
     implementation 'com.gsconrad:richcontentedittext:1.0.0'
+    implementation 'com.google.firebase:firebase-core:17.2.1'
+    implementation 'com.google.firebase:firebase-messaging:20.1.0'
     implementation 'com.github.bumptech.glide:glide:3.6.1'
     implementation 'com.github.jd-alexander:LikeButton:0.2.3'
     implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
