--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
 
     implementation 'com.paypal.sdk:paypal-android-sdk:2.16.0'
+    implementation 'com.google.firebase:firebase-messaging:20.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
